[package]
name = "kvs"
version = "0.1.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
failure = "*"
failure_derive = "*"
serde = "*"
serde_json = "1.0"
tempfile = "*"
log = "*"
env_logger = "*"
sled = "0.24.1"

[dev-dependencies]
assert_cmd = "0.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
criterion = "0.2"

[[bench]]
name = "store"
harness = false
